# ggnewscale-python

./: .gitattributes  README.md  _gen_tutorials.py  mkdocs.yml  pyproject.toml
docs/: api.md  index.md
ggnewscale/: __init__.py  _aes.py  _bump.py  _change_name.py  _demo_data.py  _ggplot_add.py  _markers.py  _protect.py  _public.py  _registry.py  _scale_lookup.py
tests/: _fixtures.py  conftest.py  test_bump.py  test_fixtures.py  test_new_scale.py  test_public.py  test_rename_aes.py  test_scale_lookup.py  test_utils.py  test_volcano_smoke.py
tutorials/: ggnewscale_overview.ipynb
