[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ggnewscale-python"
version = "0.5.2.9000+3eb57c6"
description = "Python port of the R ggnewscale package — multiple fill and colour scales in ggplot2_py"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [
    { name = "Python port maintained alongside ggplot2_py" },
]
keywords = ["ggplot2", "visualization", "ggnewscale", "scales", "aes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    # Mandated plotting stack — ggplot2_py provides every extension point we need.
    "ggplot2-python>=4.0.2",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material", "mkdocs-jupyter"]

[tool.hatch.build.targets.wheel]
packages = ["ggnewscale"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "parity: structural / SSIM parity test against R-side reference (slow).",
]
